--- a/data/.gitattributes
+++ b/data/.gitattributes
@@ -1,2 +1,3 @@
 test.mp4 filter=lfs diff=lfs merge=lfs -text
 train.mp4 filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
